refactor(manejo-excepciones): centralizar manejo de excepciones y eliminar retornos con comodines
SonarQube reportó dos problemas críticos:
1. Tipos con comodines genéricos en los retornos de los controladores (ResponseEntity<?>)
2. Lanzamiento de excepciones genéricas (RuntimeException, Exception) en los servicios

Para solucionarlos:
- Se crearon excepciones personalizadas que extienden RuntimeException para escenarios específicos
  (ResourceNotFoundException, BusinessRuleException, DuplicateResourceException, TokenRefreshException)
- Se modificaron las implementaciones de servicios para lanzar estas excepciones personalizadas
- Se implementó GlobalExceptionHandler con @RestControllerAdvice para manejar todas las excepciones de forma uniforme
- Se refactorizaron los controladores para retornar DTOs concretos, eliminando los comodines
- Se eliminaron los bloques try-catch manuales y el manejo de BindingResult de los controladores, delegando la validación al manejador global