@@ -1,5 +1,8 @@
 package com.tesis.teamsoft.service.implementation;
 
+import com.tesis.teamsoft.exception.BusinessRuleException;
+import com.tesis.teamsoft.exception.DuplicateResourceException;
+import com.tesis.teamsoft.exception.ResourceNotFoundException;
 import com.tesis.teamsoft.persistence.entity.AgeGroupEntity;
 import com.tesis.teamsoft.persistence.repository.IAgeGroupRepository;
 import com.tesis.teamsoft.presentation.dto.AgeGroupDTO;
@@ -7,9 +10,9 @@ import com.tesis.teamsoft.service.interfaces.IAgeGroupService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,42 +24,36 @@ public class AgeGroupServiceImpl implements IAgeGroupService {
 
 
     @Override
-    public AgeGroupDTO.AgeGroupResponseDTO saveAgeGroup(AgeGroupDTO.AgeGroupCreateDTO ageGroupDTO){
-        try {
-            AgeGroupEntity savedAgeGroup = modelMapper.map(ageGroupDTO, AgeGroupEntity.class);
-            validateNonOverlappingAgeRange(savedAgeGroup);
-            return modelMapper.map(ageGroupRepository.save(savedAgeGroup), AgeGroupDTO.AgeGroupResponseDTO.class);
-        } catch (Exception e) {
-            throw new RuntimeException("Error saving age group: " + e.getMessage());
-        }
+    @Transactional
+    public AgeGroupDTO.AgeGroupResponseDTO saveAgeGroup(AgeGroupDTO.AgeGroupCreateDTO ageGroupDTO) {
+        AgeGroupEntity savedAgeGroup = modelMapper.map(ageGroupDTO, AgeGroupEntity.class);
+        validateNonOverlappingAgeRange(savedAgeGroup);
+        return modelMapper.map(ageGroupRepository.save(savedAgeGroup), AgeGroupDTO.AgeGroupResponseDTO.class);
+
     }
 
     @Override
+    @Transactional
     public AgeGroupDTO.AgeGroupResponseDTO updateAgeGroup(AgeGroupDTO.AgeGroupCreateDTO ageGroupDTO, Long id){
-
-        if(!ageGroupRepository.existsById(id)){
-            throw new RuntimeException("Age group not found with ID: " + id);
+        if (!ageGroupRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Age group not found with ID: " + id);
         }
 
-        try {
-            AgeGroupEntity updatedAgeGroup = modelMapper.map(ageGroupDTO, AgeGroupEntity.class);
-            updatedAgeGroup.setId(id);
-            validateNonOverlappingAgeRange(updatedAgeGroup);
-            ageGroupRepository.save(updatedAgeGroup);
-            return modelMapper.map(updatedAgeGroup, AgeGroupDTO.AgeGroupResponseDTO.class);
-        } catch (Exception e) {
-            throw new IllegalArgumentException("Error updating age group" + e.getMessage());
-        }
+        AgeGroupEntity updatedAgeGroup = modelMapper.map(ageGroupDTO, AgeGroupEntity.class);
+        updatedAgeGroup.setId(id);
+        validateNonOverlappingAgeRange(updatedAgeGroup);
+        return modelMapper.map(ageGroupRepository.save(updatedAgeGroup), AgeGroupDTO.AgeGroupResponseDTO.class);
+
     }
 
     @Override
+    @Transactional
     public String deleteAgeGroup(Long id){
         AgeGroupEntity ageGroup = ageGroupRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Age group not found with ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Age group not found with ID: " + id));
 
-        // Verificar si tiene personas asociadas antes de eliminar
         if (ageGroup.getPersonList() != null && !ageGroup.getPersonList().isEmpty()) {
-            throw new IllegalArgumentException("Can't delete this age group");
+            throw new BusinessRuleException("Cannot delete age group because it has associated persons");
         }
 
         ageGroupRepository.deleteById(id);
@@ -64,33 +61,28 @@ public class AgeGroupServiceImpl implements IAgeGroupService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<AgeGroupDTO.AgeGroupResponseDTO> findAllAgeGroup(){
-        try {
-            return ageGroupRepository.findAll()
-                    .stream()
-                    .map(ageGroupEntity -> modelMapper.map(ageGroupEntity, AgeGroupDTO.AgeGroupResponseDTO.class))
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new RuntimeException("Error finding all age groups " + e.getMessage());
-        }
+        return ageGroupRepository.findAll()
+                .stream()
+                .map(ageGroupEntity -> modelMapper.map(ageGroupEntity, AgeGroupDTO.AgeGroupResponseDTO.class))
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<AgeGroupDTO.AgeGroupResponseDTO> findAllByOrderByIdAsc(){
-        try {
-            return ageGroupRepository.findAllByOrderByIdAsc()
-                    .stream()
-                    .map(ageGroupEntity -> modelMapper.map(ageGroupEntity, AgeGroupDTO.AgeGroupResponseDTO.class))
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new RuntimeException("Error finding all age groups " + e.getMessage());
-        }
+        return ageGroupRepository.findAllByOrderByIdAsc()
+                .stream()
+                .map(ageGroupEntity -> modelMapper.map(ageGroupEntity, AgeGroupDTO.AgeGroupResponseDTO.class))
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public AgeGroupDTO.AgeGroupResponseDTO findAgeGroupById(Long id){
         AgeGroupEntity ageGroup = ageGroupRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Age group not found with ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Age group not found with ID: " + id));
 
         return modelMapper.map(ageGroup, AgeGroupDTO.AgeGroupResponseDTO.class);
     }
@@ -103,7 +95,7 @@ public class AgeGroupServiceImpl implements IAgeGroupService {
         );
 
         if (existsOverlap) {
-            throw new IllegalArgumentException("The age range (" + ageGroup.getMinAge() +
+            throw new DuplicateResourceException("The age range (" + ageGroup.getMinAge() +
                     "-" + ageGroup.getMaxAge() +
                     ") overlaps with an existing age group");
         }
