@@ -1,5 +1,7 @@
 package com.tesis.teamsoft.service.implementation;
 
+import com.tesis.teamsoft.exception.BusinessRuleException;
+import com.tesis.teamsoft.exception.ResourceNotFoundException;
 import com.tesis.teamsoft.persistence.entity.*;
 import com.tesis.teamsoft.persistence.repository.*;
 import com.tesis.teamsoft.presentation.dto.ProjectRoleDTO;
@@ -10,7 +12,6 @@ import com.tesis.teamsoft.service.interfaces.IProjectStructureService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -32,19 +33,12 @@ public class ProjectStructureServiceImpl implements IProjectStructureService {
     public ProjectStructureDTO.ProjectStructureResponseDTO saveProjectStructure(
             ProjectStructureDTO.ProjectStructureCreateDTO projectStructureDTO) {
 
-        try {
-            ProjectStructureEntity projectStructure = modelMapper.map(projectStructureDTO, ProjectStructureEntity.class);
+        ProjectStructureEntity projectStructure = modelMapper.map(projectStructureDTO, ProjectStructureEntity.class);
 
-            if(projectStructureDTO.getProjectRoles() != null) {
-                projectStructure.setProjectRolesList(processProjectRoles(projectStructureDTO.getProjectRoles(), projectStructure));
-            }
-
-            return convertToResponseDTO(projectStructureRepository.save(projectStructure));
-        } catch (DataIntegrityViolationException e) {
-            throw new IllegalArgumentException("Error saving project structure: " + e.getMessage());
-        } catch (Exception e) {
-            throw new RuntimeException("Error saving project structure: " + e.getMessage());
+        if(projectStructureDTO.getProjectRoles() != null) {
+            projectStructure.setProjectRolesList(processProjectRoles(projectStructureDTO.getProjectRoles(), projectStructure));
         }
+        return convertToResponseDTO(projectStructureRepository.save(projectStructure));
     }
 
     @Override
@@ -52,70 +46,50 @@ public class ProjectStructureServiceImpl implements IProjectStructureService {
     public ProjectStructureDTO.ProjectStructureResponseDTO updateProjectStructure(
             ProjectStructureDTO.ProjectStructureCreateDTO projectStructureDTO, Long id) {
 
-        try {
-            // Obtener ProjectStructure con sus ProjectRoles
-            ProjectStructureEntity existingProjectStructure =
-                    projectStructureRepository.findById(id)
-                            .orElseThrow(() -> new EntityNotFoundException("ProjectStructure not found with ID: " + id));
+        ProjectStructureEntity existingProjectStructure =
+                projectStructureRepository.findById(id)
+                        .orElseThrow(() -> new ResourceNotFoundException("ProjectStructure not found with ID: " + id));
 
-            existingProjectStructure.setName(projectStructureDTO.getName());
+        existingProjectStructure.setName(projectStructureDTO.getName());
 
-            List<ProjectRolesEntity> validatedProjectRoles = null;
-            if(projectStructureDTO.getProjectRoles() != null) {
-                validatedProjectRoles = processProjectRoles(projectStructureDTO.getProjectRoles(), existingProjectStructure);
-            }
-            syncProjectRoles(existingProjectStructure, validatedProjectRoles);
-
-            return convertToResponseDTO(projectStructureRepository.save(existingProjectStructure));
-        } catch (DataIntegrityViolationException e) {
-            throw new IllegalArgumentException("Error updating project structure: " + e.getMessage());
-        } catch (Exception e) {
-            throw new RuntimeException("Error updating project structure: " + e.getMessage());
+        List<ProjectRolesEntity> validatedProjectRoles = null;
+        if(projectStructureDTO.getProjectRoles() != null) {
+            validatedProjectRoles = processProjectRoles(projectStructureDTO.getProjectRoles(), existingProjectStructure);
         }
+        syncProjectRoles(existingProjectStructure, validatedProjectRoles);
+
+        return convertToResponseDTO(projectStructureRepository.save(existingProjectStructure));
     }
 
     @Override
     @Transactional
     public String deleteProjectStructure(Long id) {
-        try {
-            ProjectStructureEntity projectStructure = projectStructureRepository.findById(id)
-                    .orElseThrow(() -> new EntityNotFoundException("ProjectStructure not found with ID: " + id));
+        ProjectStructureEntity projectStructure = projectStructureRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("ProjectStructure not found with ID: " + id));
 
-            if (projectStructure.getCycleList() != null && !projectStructure.getCycleList().isEmpty()) {
-                throw new IllegalArgumentException("Cannot delete project structure because it has associated cycles");
-            }
-
-            projectStructureRepository.deleteById(id);
-            return "Project structure deleted successfully";
-
-        } catch (IllegalArgumentException e) {
-            throw e;
-        } catch (Exception e) {
-            throw new RuntimeException("Error deleting project structure: " + e.getMessage());
+        if (projectStructure.getCycleList() != null && !projectStructure.getCycleList().isEmpty()) {
+            throw new BusinessRuleException("Cannot delete project structure because it has associated cycles");
         }
+
+        projectStructureRepository.deleteById(id);
+        return "Project structure deleted successfully";
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ProjectStructureDTO.ProjectStructureSimpleDTO> findAllProjectStructure() {
-        try {
-            return projectStructureRepository.findAllByOrderByIdAsc().stream()
-                    .map(this::convertToSimpleDTO)
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new RuntimeException("Error finding all project structures: " + e.getMessage());
-        }
+        return projectStructureRepository.findAllByOrderByIdAsc().stream()
+                .map(this::convertToSimpleDTO)
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ProjectStructureDTO.ProjectStructureResponseDTO findProjectStructureById(Long id) {
-        try {
-            ProjectStructureEntity projectStructure = projectStructureRepository.findById(id)
-                    .orElseThrow(() -> new EntityNotFoundException("ProjectStructure not found with ID: " + id));
+        ProjectStructureEntity projectStructure = projectStructureRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("ProjectStructure not found with ID: " + id));
 
-            return convertToResponseDTO(projectStructure);
-        } catch (Exception e) {
-            throw new RuntimeException("Error finding project structure by ID: " + e.getMessage());
-        }
+        return convertToResponseDTO(projectStructure);
     }
 
     private List<ProjectRolesEntity> processProjectRoles(
@@ -127,14 +101,12 @@ public class ProjectStructureServiceImpl implements IProjectStructureService {
         }
 
         return projectRolesDTO.stream().map(dto -> {
-            // Validar que existen las entidades
             RoleEntity role = roleRepository.findById(dto.getRole())
-                    .orElseThrow(() -> new RuntimeException("Role not found with ID: " + dto.getRole()));
+                    .orElseThrow(() -> new ResourceNotFoundException("Role not found with ID: " + dto.getRole()));
 
             RoleLoadEntity roleLoad = roleLoadRepository.findById(dto.getRoleLoad())
-                    .orElseThrow(() -> new RuntimeException("RoleLoad not found with ID: " + dto.getRoleLoad()));
+                    .orElseThrow(() -> new ResourceNotFoundException("RoleLoad not found with ID: " + dto.getRoleLoad()));
 
-            // Crear ProjectRole
             ProjectRolesEntity projectRole = new ProjectRolesEntity();
             projectRole.setAmountWorkersRole(dto.getAmountWorkersRole());
             projectRole.setProjectStructure(projectStructure);
@@ -142,23 +114,18 @@ public class ProjectStructureServiceImpl implements IProjectStructureService {
             projectRole.setRoleLoad(roleLoad);
 
             return projectRole;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
-    private void syncProjectRoles(
-            ProjectStructureEntity projectStructure,
-            List<ProjectRolesEntity> validatedProjectRoles) {
-
+    private void syncProjectRoles(ProjectStructureEntity projectStructure, List<ProjectRolesEntity> validatedProjectRoles) {
         if (validatedProjectRoles == null || validatedProjectRoles.isEmpty()) {
             projectStructure.getProjectRolesList().clear();
             return;
         }
 
-        // Mapa de ProjectRoles existentes por roleId
         Map<Long, ProjectRolesEntity> existingMap = projectStructure.getProjectRolesList().stream()
                 .collect(Collectors.toMap(pr -> pr.getRole().getId(), pr -> pr));
 
-        // Lista para los ProjectRoles actualizados
         List<ProjectRolesEntity> updatedList = new ArrayList<>();
 
         for (ProjectRolesEntity validatePR : validatedProjectRoles) {
@@ -169,12 +136,10 @@ public class ProjectStructureServiceImpl implements IProjectStructureService {
                 existing.setAmountWorkersRole(validatePR.getAmountWorkersRole());
                 existing.setRoleLoad(validatePR.getRoleLoad());
                 updatedList.add(existing);
-            } else {
+            } else
                 updatedList.add(validatePR);
-            }
         }
 
-        // Actualizar la lista en ProjectStructure
         projectStructure.getProjectRolesList().clear();
         projectStructure.getProjectRolesList().addAll(updatedList);
     }
@@ -183,7 +148,6 @@ public class ProjectStructureServiceImpl implements IProjectStructureService {
         ProjectStructureDTO.ProjectStructureResponseDTO responseDTO =
                 modelMapper.map(entity, ProjectStructureDTO.ProjectStructureResponseDTO.class);
 
-        // Convertir ProjectRoles
         if (entity.getProjectRolesList() != null) {
             responseDTO.setProjectRoles(entity.getProjectRolesList().stream()
                     .map(proR -> {
@@ -195,7 +159,7 @@ public class ProjectStructureServiceImpl implements IProjectStructureService {
                         dto.setRoleLoad(modelMapper.map(proR.getRoleLoad(), RoleLoadDTO.RoleLoadResponseDTO.class));
                         return dto;
                     })
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         return responseDTO;
