@@ -1,5 +1,7 @@
 package com.tesis.teamsoft.service.implementation;
 
+import com.tesis.teamsoft.exception.BusinessRuleException;
+import com.tesis.teamsoft.exception.ResourceNotFoundException;
 import com.tesis.teamsoft.persistence.entity.ReligionEntity;
 import com.tesis.teamsoft.persistence.repository.IReligionRepository;
 import com.tesis.teamsoft.presentation.dto.ReligionDTO;
@@ -7,9 +9,9 @@ import com.tesis.teamsoft.service.interfaces.IReligionService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,78 +22,61 @@ public class ReligionServiceImpl implements IReligionService {
 
 
     @Override
+    @Transactional
     public ReligionDTO.ReligionResponseDTO saveReligion(ReligionDTO.ReligionCreateDTO religionDTO) {
-
-        try {
-            ReligionEntity savedReligion = modelMapper.map(religionDTO, ReligionEntity.class);
-            religionRepository.save(savedReligion);
-            return modelMapper.map(savedReligion, ReligionDTO.ReligionResponseDTO.class);
-
-        } catch (Exception e) {
-            throw new RuntimeException("Error saving religion: " + e.getMessage());
-        }
-
-
+        ReligionEntity savedReligion = modelMapper.map(religionDTO, ReligionEntity.class);
+        religionRepository.save(savedReligion);
+        return modelMapper.map(savedReligion, ReligionDTO.ReligionResponseDTO.class);
     }
 
     @Override
+    @Transactional
     public ReligionDTO.ReligionResponseDTO updateReligion(ReligionDTO.ReligionCreateDTO religionDTO, Long id) {
+        if (!religionRepository.existsById(id))
+            throw new ResourceNotFoundException("Religion not found with ID: " + id);
 
-        if (!religionRepository.existsById(id)) {
-            throw new RuntimeException("Religion not found with ID: " + id);
-        }
-
-        try {
-            ReligionEntity savedReligion = modelMapper.map(religionDTO, ReligionEntity.class);
-            savedReligion.setId(id);
-            religionRepository.save(savedReligion);
-            return modelMapper.map(savedReligion, ReligionDTO.ReligionResponseDTO.class);
-
-        } catch (Exception e) {
-            throw new IllegalArgumentException("Error updating religion: " + e.getMessage());
-        }
+        ReligionEntity savedReligion = modelMapper.map(religionDTO, ReligionEntity.class);
+        savedReligion.setId(id);
+        religionRepository.save(savedReligion);
+        return modelMapper.map(savedReligion, ReligionDTO.ReligionResponseDTO.class);
     }
 
     @Override
+    @Transactional
     public String deleteReligion(Long id) {
+        ReligionEntity religion = religionRepository.findById(id)
+                .orElseThrow(() -> new BusinessRuleException("Religion not found with id: " + id));
 
-        if (!religionRepository.existsById(id)) {
-            throw new RuntimeException("Religion not found with ID: " + id);
-        }
+        if(religion.getPersonList() != null && !religion.getPersonList().isEmpty())
+            throw new BusinessRuleException("Cannot delete religion because it has associated persons");
+
         religionRepository.deleteById(id);
         return "Religion deleted";
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ReligionDTO.ReligionResponseDTO> findAllReligion() {
-        try {
-            return religionRepository.findAll()
-                    .stream()
-                    .map(religionEntity -> modelMapper.map(religionEntity, ReligionDTO.ReligionResponseDTO.class))
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new RuntimeException("Error finding all religions " + e.getMessage());
-        }
+        return religionRepository.findAll()
+                .stream()
+                .map(religionEntity -> modelMapper.map(religionEntity, ReligionDTO.ReligionResponseDTO.class))
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ReligionDTO.ReligionResponseDTO> findAllByOrderByIdAsc() {
-        try {
-
-            return religionRepository.findAllByOrderByIdAsc()
-                    .stream()
-                    .map(religionEntity -> modelMapper.map(religionEntity, ReligionDTO.ReligionResponseDTO.class))
-                    .collect(Collectors.toList());
-        } catch (Exception e) {
-            throw new RuntimeException("Error finding all religions: " + e.getMessage());
-        }
+        return religionRepository.findAllByOrderByIdAsc()
+                .stream()
+                .map(religionEntity -> modelMapper.map(religionEntity, ReligionDTO.ReligionResponseDTO.class))
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ReligionDTO.ReligionResponseDTO findReligionById(Long id) {
-
         ReligionEntity religion = religionRepository.findById(id).
-                orElseThrow(() -> new RuntimeException("Religion not found with ID: " + id));
+                orElseThrow(() -> new ResourceNotFoundException("Religion not found with ID: " + id));
 
         return modelMapper.map(religion, ReligionDTO.ReligionResponseDTO.class);
     }
